manifests/oauth2-proxy/netpol-oauth2-proxy-prometheus.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: oauth2-proxy-prometheus
  namespace: oauth2-proxy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: oauth2-proxy-prometheus
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "4180"
              protocol: TCP
          rules:
            http:
              - {}
  egress:
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prometheus
            io.kubernetes.pod.namespace: monitoring
      toPorts:
        - ports:
            - port: "9090"
              protocol: TCP
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kanidm
            io.kubernetes.pod.namespace: kanidm
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
